--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 *
 * ======================================================= */
 body {
+  min-width: 320px;
   font-family: "Merriweather", serif;
   font-weight: 600;
   font-size: 14px;
@@ -1786,5 +1787,69 @@ blockquote p > cite {
   background: none;
   background: #4d4d4d;
 }
+
+/* footer */
+
+.rowFooter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logoFooter {
+  max-width: 280px;
+  padding: 0.5rem;
+}
+
+.titleFooter {
+  color: #a58e69;
+  text-align: center;
+  font-weight: 500;;
+}
+
+.addressFooter {
+  color: #f2e0c2;
+  font-weight: 500;
+  text-align: center;
+}
+
+.socialLinks {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  padding: 1rem 0;
+}
+
+.socialLinks .social-icon {
+  margin: 0 10px; 
+  display: inline-block;
+}
+
+.social-icon img {
+  width: 40px; 
+  height: 40px;
+  transition: transform 0.3s ease;
+}
+
+.social-icon img:hover {
+  transform: scale(1.1); 
+}
+/* end footer */
+
+/* Copyright */
+.footer-copyright {
+  padding-top: 1rem;
+  background-color: #a58e69;
+}
+
+.textFooter {
+  color: #545454;
+}
+
+.linkFooter {
+  color:#1d1d1d
+}
+/* end Copyright */
 
 /*# sourceMappingURL=style.css.map */
