--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 body {
   min-width: 320px;
   font-family: "Merriweather", serif;
+  overflow-x: hidden;
   font-weight: 600;
   font-size: 14px;
   line-height: 1.7;
@@ -113,8 +114,14 @@ header {
 }
 /* end Header Section */
 
-#page {
-  position: relative;
+/* #page {
+  max-width: 1440px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+
   overflow-x: hidden;
   overflow-y: auto;
   width: 100%;
@@ -139,7 +146,7 @@ header {
   z-index: 101;
   background: rgba(0, 0, 0, 0.7);
   content: "";
-}
+} */
 
 
 /* Calculator Section */
@@ -1997,13 +2004,15 @@ blockquote p > cite {
 
 /* testimonials */
 #testimonials {
+  max-width: 1440px;
   background-color: #f2e0c2;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 60px;
-  padding: 32px 8%;
+  padding: 1rem;
+  margin: 0 auto;
 }
 
 .rowtestimonial {
@@ -2224,7 +2233,7 @@ blockquote p > cite {
   font-size: 22px;
   color: #fff;
   padding: 10px 20px;
-  background-color: #25d366;
+  background-color: #ff6600;
   border: 1px solid #545454;
   border-radius: 10px;
   text-decoration: none;
@@ -2232,16 +2241,78 @@ blockquote p > cite {
   align-items: center;
 }
 
+.ladoDireito .btn:hover { 
+  background-color: #a58e6996 !important;
+  color: #1d1d1d !important;
+  border: 1px solid #a58e69 !important;
+  transition: 0.2s ease;
+}
+
 .ladoDireito .btn i {
   font-size: 42px;
   margin-right: 8px;
 }
 
+@media screen and (max-width: 768px) {
+  .headerContact h1 {
+    font-size: 28px;
+    line-height: 32px;
+  }
+
+  .headerContact h2 {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  .ladoDireito .btn { 
+    font-size: 16px;
+    color: #fff;
+    padding: 10px;
+    background-color: #ff6600;
+    border: 1px solid #545454;
+    border-radius: 10px;
+    text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+  }
+
+  .ladoDireito .btn i {
+    font-size: 28px;
+    margin-right: 8px;
+  }
+
+  .ladoDireito .btn i:hover { 
+    background-color: #a58e6996;
+    color: #1d1d1d;
+    transition: 0.2s ease;
+  }
+
+  .ladoEsquerdo h4 {
+    font-size: 22px;
+    color: #545454;
+    font-weight: 600;
+    font-family: 'roboto', sans-serif;
+    line-height: 28px;  
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: start;
+  }
+
+  .ladoEsquerdo h4 i {  
+    font-size: 32px;
+    color: #a58e69;
+    margin-right: 10px;
+  }
+}
+
 .gradient-line {
-  width: 100%;
-  height: 16px; /* Altura da linha */
+  width: 85%;
+  height: 12px; /* Altura da linha */
+  border-radius: 50px;
   background: linear-gradient(to right, #a58e69, #545454);
-  margin: 20px 0; /* Espaçamento acima e abaixo da linha */
+  margin: 20px auto; /* Espaçamento acima e abaixo da linha */
 }
 
 .gradient-line-shadow {
@@ -2269,12 +2340,11 @@ blockquote p > cite {
 
 /* Container principal */
 .containerAbout {
-  max-width: 1800px;
+  max-width: 1440px;
   background-color: #666565;
   border-radius: 20px;
   margin: 0 auto;
-  padding-bottom: 2rem;
-  padding-top: 2rem;
+  padding: 2rem;
 }
 
 .rowAboutMission {
@@ -2303,7 +2373,7 @@ blockquote p > cite {
   justify-content: center;
   gap: 1rem; /* Espaço entre colunas */
   flex-wrap: wrap; /* Garante responsividade */
-  padding-bottom: 2rem;
+  padding: 2rem;
 }
 
 /* Coluna da Imagem */
@@ -2367,28 +2437,6 @@ blockquote p > cite {
       padding: 10px;
   }
 }
-
-
-/* Estilos responsivos
-@media (max-width: 768px) {
-
-  .titleAbout {
-    margin-top: -3rem;
-    font-size: 22px;
-  }
-  .imgAboutBalancas, .imgAboutAdvogados {
-    padding: 2rem;
-  }
-  .imgAboutBalancas img, .imgAboutAdvogados img {
-    width: 65px;
-    height: 75px;
-  }
-  .textAbout p {
-    font-size: 14px;
-    padding: 2rem;
-  } 
-} */
-/* end About */
 
 /* footer */
 .rowFooter {
