--- a/css/style.css
+++ b/css/style.css
@@ -2146,7 +2146,7 @@ blockquote p > cite {
 /* contact */
 
 .sectionContact {
-  padding-top: 6rem;
+  padding-top: 2rem;
   text-align: center;
   justify-content: center;
   align-items: center;
@@ -2331,112 +2331,114 @@ blockquote p > cite {
 }
 /* About */
 
-/* Estilização geral da seção */
-.sectionAbout {
-  padding: 0;
-  margin: 0;
+/* Estilos gerais */
+.section-about {
+  padding-left: 25px;
+  padding-right: 25px;
+  background-color: #f2e0c2;
+}
+
+.container-about {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+/* Layout principal */
+.about-content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.about-text {
+  flex: 1;
+  min-width: 300px;
+}
+
+.about-text h1 {
+  font-size: 28px;
+  color: #a58e69;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 10px;
+  padding-bottom: 1rem;
+}
+
+.about-text p {
+  font-size: 16px;
+  line-height: 1.6;
+  color: #666;
+  margin-bottom: 10px;
+}
+
+.about-image {
+  flex: 1;
   text-align: center;
 }
 
-/* Container principal */
-.containerAbout {
-  max-width: 1440px;
-  background-color: #666565;
-  border-radius: 20px;
-  margin: 0 auto;
-  padding: 2rem;
+.about-image img {
+  width: 100%;
+  max-width: 400px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.rowAboutMission {
+/* Seção Missão e Visão */
+.mission-vision {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  gap: 4rem; /* Espaço entre colunas */
-  flex-wrap: wrap; /* Garante responsividade */
+  gap: 30px;
+  margin-top: 40px;
 }
 
-/* Título */
-.rowAbout h1 {
-  width: 100%;
-  text-align: center;;
-  font-size: 36px;
-  font-weight: bold;
-  font-family: 'roboto', sans-serif;
-  color: #a58e69;
-  text-transform: uppercase;
-}
-
-/* Layout da linha */
-.rowAbout {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem; /* Espaço entre colunas */
-  flex-wrap: wrap; /* Garante responsividade */
-  padding: 2rem;
-}
-
-/* Coluna da Imagem */
-.col img {
-  width: 100%;
-  max-width: 650px; /* Limita o tamanho da imagem */
-  height: auto;
-  border-radius: 20px;
-  box-shadow: #a58e69 0px 0px 0px 3px;
-}
-
-.colAbout {
-  border-radius: 20px;
-  padding-top: 1rem;
-}
-
-.colAboutTxt {
-  border-radius: 20px;
-  margin: 20px;
-}
-
-.colAbout p {
-  font-size: 18px;
-  font-family: 'roboto', sans-serif;
-  color: #f2e0c2;
-}
-
-/* Coluna do Texto */
-.paragraphAbout {
-  width: 100%;
-  font-size: 18px;
-  font-family: 'roboto', sans-serif;
-  color: #f2e0c2;
-  line-height: 1.6;
-  text-align: justify;
-  max-width: 550px;
+.mission, .vision {
+  flex: 1;
+  min-width: 280px;
+  max-width: 400px;
+  text-align: center;
+  color:#fff;
+  background-color: #a58e69;
   padding: 20px;
-  box-sizing: border-box;
-  border-radius: 20px;
-  box-shadow: #a58e69 0px 0px 0px 3px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.missionAbout, .visionAbout {
-  font-size: 36px;
+.mission h2, .vision h2 {
+  font-size: 22px;
   font-weight: bold;
-  font-family: 'roboto', sans-serif;
-  color: #a58e69 !important;
   text-transform: uppercase;
-  gap: 4rem;
+  letter-spacing: 2px;
+  color: #545454;
+  margin-bottom: 10px;
 }
 
-/* Responsividade para telas menores */
+.mission p, .vision p {
+  font-size: 16px;
+  line-height: 1.6;
+  font-weight: 500;
+  color: #fff;
+}
+
+/* Responsividade */
 @media (max-width: 768px) {
-  .rowAbout {
-      flex-direction: column; /* Empilha os elementos no mobile */
+  .about-content {
+      flex-direction: column;
       text-align: center;
   }
 
-  .paragraphAbout {
-      text-align: center; /* Centraliza o texto */
-      padding: 10px;
+  .mission-vision {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .about-text, .about-image {
+      max-width: 100%;
   }
 }
+
 
 /* footer */
 .rowFooter {
