--- a/css/style.css
+++ b/css/style.css
@@ -1876,6 +1876,94 @@ blockquote p > cite {
   background: #4d4d4d;
 }
 
+
+.contact-services {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 40px 20px;
+  text-align: center;
+}
+
+.container-services h2 {
+  font-size: 28px;
+  font-weight: bold;
+  color: #a58e69;
+  text-align: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin-bottom: 2rem;
+}
+
+.contact-cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 20px;
+  justify-content: center;
+}
+
+.contact-card {
+  background: #54545475;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  text-align: center;
+  transition: transform 0.3s ease-in-out;
+}
+
+.contact-card:hover {
+  transform: translateY(-5px);
+}
+
+.contact-card img {
+  width: 100%;
+  max-height: 380px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 15px;
+}
+
+.contact-card h3 {
+  font-size: 1.5rem;
+  color: #1d1d1d;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.contact-card p {
+  font-size: 12px;
+  color: #1d1d1d;
+  margin-bottom: 15px;
+}
+
+.btn-contact {
+  display: inline-block;
+  padding: 10px 15px;
+  font-size: 12px;
+  font-family: 'roboto', sans-serif;
+  color: #fff;
+  background: #ff6600;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 0.3s ease-in-out;
+}
+
+.btn-contact:hover {
+  background: rgba(165, 142, 105, 0.59) ;
+  color: #1d1d1d;
+  transition: background 0.3s ease-in-out;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+  .contact-cards {
+      grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+  }
+}
+
+
+
 /* testimonial */
 .setionTestimonial {
   padding: 6rem;
@@ -1912,9 +2000,9 @@ blockquote p > cite {
   font-weight: bold;
   color: #a58e69;
   text-align: center;
-  margin-bottom: 30px;
+  letter-spacing: 2px;
   text-transform: uppercase;
-  padding-bottom: 1rem;
+  padding-bottom: 2rem;
 }
 
 .services-grid {
@@ -2008,7 +2096,7 @@ blockquote p > cite {
 
 .swiper {
   width: 100%;
-  height: 440px;
+  height: 380px;
   padding-bottom: 60px;
 } 
 
@@ -2016,7 +2104,7 @@ blockquote p > cite {
   background-color: #fff;
   display: flex;
   flex-direction: column;
-  gap: 18px;
+  gap: 24px;
   justify-content: center;
   box-shadow: 0px 0px 20px 0px rgba(92, 115, 160, 0.07);
   padding: 45px;
@@ -2042,7 +2130,7 @@ blockquote p > cite {
 .testimonial-author {
   display: flex;
   align-items: center;
-  gap: 18px;
+  gap: 14px;
   padding-bottom: 1rem;
 }
 
@@ -2062,7 +2150,9 @@ blockquote p > cite {
 .author-info h3 {
   font-weight: 600;
   font-size: 14px;
-  color: #111928;
+  color: #545454;
+  margin-top: 2.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .author-info p {
@@ -2369,7 +2459,6 @@ blockquote p > cite {
   z-index: 1;
 }
 
-
 .about-image::before {
   width: 80%;
   content: "";
@@ -2396,7 +2485,7 @@ blockquote p > cite {
   min-width: 280px;
   max-width: 580px;
   text-align: center;
-  color:#fff;
+  color:#ff6600;
   background-color: #a58e698c;
   padding: 20px;
   border-radius: 10px;
@@ -2415,8 +2504,11 @@ blockquote p > cite {
 .mission p, .vision p {
   font-size: 16px;
   line-height: 1.6;
-  font-weight: 500;
-  color: #fff;
+  font-weight: 600;
+  font-family: 'roboto', sans-serif;
+  font-style: italic;
+  color: #1d1d1d;
+  
 }
 
 @media (max-width: 768px) {
